remove coupling of hmac in token creation
