# src/main/java/me/sonam/jwt/Router.java
@@ -26,7 +26,8 @@ public class Router {
                         and(accept(MediaType.APPLICATION_JSON)), handler::createAccessToken)
                 .andRoute(POST("/jwts/keyId"). and(accept(MediaType.APPLICATION_JSON)), handler::getKeyId)
                 .andRoute(GET("/jwts/publickeys/{keyId}")
-                        .and(accept(MediaType.TEXT_PLAIN)), handler::getPublicKey);
+                        .and(accept(MediaType.APPLICATION_JSON)), handler::getPublicKey)
+                .andRoute(POST("/jwts/hmac/{algorithm}/{key}").and(accept(MediaType.APPLICATION_JSON)), handler::generateHmac);
 
     }
 }
